--- a/packages/automerge-repo/package.json
+++ b/packages/automerge-repo/package.json
@@ -1,12 +1,24 @@
 {
-  "name": "@automerge/automerge-repo",
-  "version": "2.5.2-alpha.1",
-  "description": "A repository object to manage a collection of automerge documents",
-  "repository": "https://github.com/automerge/automerge-repo/tree/master/packages/automerge-repo",
+  "name": "@cryptforge/automerge-repo",
+  "version": "2.5.2-cryptforge.1",
+    "description": "A repository object to manage a collection of automerge documents (CryptForge fork)",
+    "repository": {
+    "type": "git",
+    "url": "git@github.com:viktor-albus/automerge-repo.git",
+    "directory": "packages/automerge-repo"
+  },
   "author": "Peter van Hardenberg <pvh@pvh.ca>",
+  "contributors": [
+    "Viktor Albus <viktor@cryptforge.io>"
+  ],
   "license": "MIT",
   "type": "module",
   "main": "dist/index.js",
+  "files": [
+    "dist",
+    "README.md",
+    "LICENSE"
+  ],
   "scripts": {
     "build": "tsc",
     "watch": "npm-watch build",
@@ -19,6 +31,7 @@
     "crypto": false
   },
   "devDependencies": {
+    "@types/debug": "^4.1.12",
     "http-server": "^14.1.0",
     "ts-node": "^10.9.2",
     "vite": "^5.0.8"
@@ -30,7 +43,7 @@
     "debug": "^4.3.4",
     "eventemitter3": "^5.0.1",
     "fast-sha256": "^1.3.0",
-    "uuid": "^9.0.0",
+    "uuid": "^13.0.0",
     "xstate": "^5.9.1"
   },
   "exports": {
@@ -58,5 +71,12 @@
   },
   "publishConfig": {
     "access": "public"
-  }
+  },
+  "keywords": [
+    "automerge",
+    "crdt",
+    "collaboration",
+    "cryptforge",
+    "fork"
+  ]
 }
