--- a/packages/automerge-repo/tsconfig.json
+++ b/packages/automerge-repo/tsconfig.json
@@ -14,5 +14,5 @@
     "skipLibCheck": true
   },
   "include": ["src/**/*.ts"],
-  "exclude": ["dist"]
+  "exclude": ["dist", "src/helpers/tests/**/*"]
 }
